# YOLO-World

./: .gitignore  Dockerfile  README.md  client.py  dino_precompute.py  dino_verify.py  environment.yml  inference.py  pyproject.toml  requirements.txt  server.py  setup.sh  test_client.yaml
DINO_test/: README.md
DINO_test/sel_feats/real_ref/: aid kit.npy  backpack.npy  bench.npy  berries.npy  berry tree.npy  bird.npy  boots.npy  bowl.npy  bread.npy  brownie.npy  button.npy  cable reel.npy  camera.npy  cans.npy  car key.npy  car.npy  cash box.npy  chair.npy  charger.npy  cheese.npy  clothes.npy  coffee bag.npy  compass.npy  cooler box.npy  crate.npy  desk.npy  dog.npy  door.npy  drill.npy  espresso machine.npy  eyeglasses.npy  fireplace.npy  fruits.npy  glass.npy  glasses.npy  gloves.npy  grill.npy  hammer.npy  hat.npy  headlamp.npy  (+47 more)
configs/cofinetune/: README.md  yolo_world_v2_cofinetune_sdg.py  yolo_world_v2_l_cofinetune_custom_lvis.py  yolo_world_v2_m_cofinetune_custom_lvis.py  yolo_world_v2_s_cofinetune_custom_lvis.py  yolo_world_v2_x_cofinetune_custom_lvis.py
configs/finetune/: yolo_world_v2_finetune_sdg.py
configs/inference/: directory_inference.yaml  image_inference.yaml  inference_demo.py  video_inference.yaml  yolo_world_v2_m.py  yolo_world_v2_x_inference.yaml
configs/inference/client_server/: client.yaml  server.yaml
configs/pretrain/: yolo_world_v2_l.py  yolo_world_v2_s.py  yolo_world_v2_x.py
inference/: __init__.py  config.py  detection_result.py  evaluation.py  gpu_memory_tracker.py  inference.py  results_writer.py  server.py  server_model.py  utils.py  yolo_world.py
inference/visualization/: __init__.py  annotator.py  video_writer.py
tools/: generate_coco_text.py  generate_lvis_class_texts.py  prepare_sdg_dataset.py  train.py  verify_config_syntax.py
yolo_world/models/dense_heads/: yolo_world_head.py
yolo_world/models/detectors/: yolo_world.py
