[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo_world"
version = "0.1.0"
description = "YOLO-World: Real-time Open Vocabulary Object Detection"
readme = "README.md"
keywords = ["object detection", "computer vision", "yolo", "open vocabulary"]
authors = [
    { name = "Tencent AILab", email = "ronnysong@tencent.com" },
]
license = {text = "Apache License 2.0"}

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
requires-python = ">=3.8"

dependencies = [
    # Core ML framework
    "torch>=2.0.0",
    "torchvision>=0.15.0",

    # MMDetection ecosystem
    "mmdet==3.0.0",
    "mmengine==0.10.0",
    "mmcv==2.0.0",
    "mmyolo==0.6.0",

    # NLP/Vision-Language
    "transformers>=4.36.0",
    "tokenizers>=0.15.0",

    # Core utilities
    "numpy>=1.26.0,<2.0.0",
    "opencv-python>=4.8.0",
    "pillow>=11.0.0",
    "scipy>=1.10.0",

    # Visualization and data handling
    "matplotlib>=3.7.0",
    "supervision==0.19.0",
    "shapely>=2.0.0",

    # Configuration and utilities
    "pyyaml>=6.0.0",
    "addict>=2.4.0",
    "termcolor>=2.3.0",
    "terminaltables>=3.1.0",
    "rich>=13.0.0",
    "prettytable>=3.9.0",
    "tqdm>=4.65.0",

    # Data format support
    "pycocotools>=2.0.0",
    "lvis>=0.5.3",

    # Server/API support
    "flask>=2.3.0",
    "requests>=2.28.0",

    # Development tools
    "openmim>=0.3.9",
]

[tool.setuptools]
package-dir = {"yolo_world" = "yolo_world"}
include-package-data = false
license-files = ["LICENSE"]
zip-safe = true

[tool.setuptools.packages.find]
include = ["yolo_world*", "inference*"]
exclude = ["docs*", "tests*","third_party*","assets*"]